# SkinCare-AI

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md  Skin Disease AI Backend Implementation.md  docker-compose.yml  main.py  pyproject.toml  rav.yaml  readme_old.md  requirements.txt  setup_ecs_service.py  start.sh  task-definition.json  ui.py
.github/workflows/: deploy.yml
api/v1/: router.py
api/v1/endpoints/: health.py  skin_analysis.py
core/: config.py  db.py  dependency.py  logger.py
models/: db_models.py  schemas.py
models/weights/: yolov8n_cls.pt
scripts/: train.py
services/: advisor_service.py  skin_service.py
services/interface/: analysis_interface.py  chat_interface.py
system_prompts/: prompt_llama.py  prompt_v1.py
tests/: conftest.py  test_api.py
utils/: file_validator.py  gemini_client.py  groq_client.py  logger.py  ollama_client.py  s3_client.py  ui_helpers.py  visualization.py
